--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.andpaklods">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,10 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ANDPaKlods">
         <activity
+            android:name=".SignUpWithMail"
+            android:exported="false" />
+        <activity
             android:name=".SignUp"
             android:exported="false" />
         <activity
-            android:name=".Items"
+            android:name="com.example.andpaklods.Items"
             android:exported="false" />
         <activity
             android:name=".Login"
