--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
             android:name=".SignUpWithMail"
             android:exported="false" />
         <activity
+            android:name=".CreateSaleOffer"
+            android:exported="false" />
+        <activity
             android:name=".SignUp"
             android:exported="false" />
         <activity
