--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espressoespresso-core:3.4.0'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
 }
